feat: articles feed

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body{
   --primary-color: #FAFAFA;
   --secondary-color: #0B0B6B;
   --tertiary-color: #000032;
+  --extra-color: #8C8CAB
 }
 
 button {
