--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -17,6 +17,7 @@
   position: absolute;
   width: 100px;
   height: 100px;
+  background-image: url('src/assets/texture.png');
 }
 
 .header {
@@ -75,7 +76,7 @@ li {
 
 .profile-container {
   grid-row: 1 / 3;
-  justify-self: center;
+  justify-self: end;
 }
 
 .profile-pic {
