--- a/src/components/articles/articles.css
+++ b/src/components/articles/articles.css
@@ -1,56 +1,71 @@
-.secondary-text{
-    color: var(--extra-color);
-    margin-top: 35px;
+.secondary-text {
+  color: var(--extra-color);
+  margin-top: 35px;
 }
 
-.article-container{
-    display: grid;
-    background: rgba(250, 250, 250, 35%);
-    border: 1px solid;
-    border-color: #FFFFFF;
-    box-shadow: 0px 0px 25px 0px rgba(0, 0, 254, 5%);
-    height: 250px;
-    width: 350px;
-    grid-template-rows: auto 80px;
-    margin: 20px 0px 20px 20px;
-    border-radius: 20px;
-    backdrop-filter: blur(5px);
-    position: relative;
-    overflow: hidden;
-
+.article-container {
+  display: grid;
+  background: rgba(250, 250, 250, 35%);
+  border: 1px solid;
+  border-color: #ffffff;
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 254, 10%);
+  height: 250px;
+  width: 350px;
+  grid-template-rows: auto 80px;
+  margin: 20px 0px 20px 20px;
+  border-radius: 20px;
+  backdrop-filter: blur(5px);
+  position: relative;
+  overflow: hidden;
 }
 
-.first-article{
-    margin-left: 40px;
+.first-article {
+  margin-left: 40px;
 }
 
-.article-background{
-    margin-left: 40px;
-    border-radius: 20px;
-    background-color: #0000FE;
-    position: absolute;
-    height: 200px;
-    width: 350px;
-    z-index: -2;
-    filter: blur(100px);
-    opacity: 0.1;
+.article-container::after {
+  content: "";
+  border-radius: 20px;
+  background-color: #0000fe;
+  position: absolute;
+  height: 200px;
+  width: 350px;
+  z-index: -2;
+  filter: blur(100px);
+  opacity: 0.1;
 }
 
-.article-text{
-    padding: 20px 20px 0px 20px;
-    font-weight: 400;
-    font-size: 28px;
+.article-text {
+  padding: 20px 20px 0px 20px;
+  font-weight: 400;
+  font-size: 28px;
 }
 
-.article-cta{
-    justify-self: end;
-    align-self: center;
-    padding-right: 20px;
+.article-cta {
+  justify-self: end;
+  align-self: center;
+  padding-right: 20px;
 }
 
-.articles-feed{
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
+.articles-feed {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
 }
 
+.articles-feed::-webkit-scrollbar {
+  height: 8px;
+  background-color: transparent;
+}
+
+.articles-feed::-webkit-scrollbar-thumb {
+  background-color: rgba(250, 250, 250, 50%);
+  border-radius: 6px; 
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 254, 10%);
+}
+
+.articles-feed::-webkit-scrollbar-thumb:hover {
+  background-color: var(
+    --primary-color
+  );
+}
