--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -12,12 +12,16 @@
   filter: blur(150px);
 }
 
-.noise-background{
-  z-index: -3;
-  position: absolute;
-  width: 100px;
-  height: 100px;
+.grain-hero{
   background-image: url('src/assets/texture.png');
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+  mix-blend-mode: overlay;
+  opacity: 0.5;
+  position: absolute;
+  top: 0px;
+  z-index: -3;
 }
 
 .header {
