fix: styles in footer, header and articles-projects feed

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,20 +6,20 @@
   z-index: -4;
 }
 
-.grain-footer{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    bottom: 0px;
-    z-index: -3;
-    mix-blend-mode: overlay;
-    opacity: 1;
-  }
+.grain-footer {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  bottom: 0px;
+  z-index: -3;
+  mix-blend-mode: overlay;
+  opacity: 1;
+}
 
-  .footer-container{
-    position:relative;
-    padding-bottom: 10px;
-  }
+.footer-container {
+  position: relative;
+  padding-bottom: 10px;
+}
 
 .footer-texts {
   font-size: 24px;
@@ -41,4 +41,9 @@
   font-weight: 600;
   margin-top: 45px;
   margin-bottom: 45px;
+}
+
+
+.footer-texts a {
+  text-decoration: underline;
 }
