--- a/src/components/button-icon/button.css
+++ b/src/components/button-icon/button.css
@@ -8,11 +8,12 @@
   padding: 10px 15px;
   font-size: 18px;
   max-height: 42px;
+  cursor: pointer;
 }
 
 .icon-bttn {
   margin-right: 5px;
-  width: 14px;
+  width: 18px;
   align-self: center;
 }
 
