fix: minor bugs on styles

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -25,7 +25,7 @@
   font-size: 24px;
   margin-left: 40px;
   margin-right: 40px;
-  padding-right: 300px;
+  padding-right: 220px;
   line-height: 30px;
   color: var(--primary-color);
 }
@@ -46,4 +46,18 @@
 
 .footer-texts a {
   text-decoration: underline;
+}
+
+.cta-mail a{
+  text-decoration: underline;
+}
+
+.footer-logo{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  margin-right: 40px;
+  margin-bottom: 40px;
 }
