--- a/src/components/articles/articles.css
+++ b/src/components/articles/articles.css
@@ -12,14 +12,13 @@
   height: 250px;
   width: 350px;
   grid-template-rows: auto 80px;
-  margin: 20px 0px 20px 20px;
   border-radius: 20px;
   backdrop-filter: blur(5px);
   position: relative;
   overflow: hidden;
 }
 
-.first-article {
+article:first-child {
   margin-left: 40px;
 }
 
@@ -49,6 +48,9 @@
 
 .articles-feed {
   display: flex;
+  gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
 }
@@ -60,12 +62,10 @@
 
 .articles-feed::-webkit-scrollbar-thumb {
   background-color: rgba(250, 250, 250, 50%);
-  border-radius: 6px; 
+  border-radius: 6px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 254, 10%);
 }
 
 .articles-feed::-webkit-scrollbar-thumb:hover {
-  background-color: var(
-    --primary-color
-  );
+  background-color: var(--primary-color);
 }
