--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -4,6 +4,13 @@
     font-size: 24px;
 }
 
+.projects-feed{
+    display: grid;
+    gap: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
 .project-container{
     display: grid;
     background: rgba(250, 250, 250, 35%);
@@ -13,7 +20,6 @@
     grid-template-columns: auto 430px;
     height: 250px;
     grid-template-rows: auto 80px;
-    margin: 20px 40px;
     border-radius: 20px;
     backdrop-filter: blur(5px);
     padding: 30px 25px 0px 25px;
