--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   margin: 0%;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 body{
   background-color: var(--primary-color);
   overflow-x: hidden;
