--- a/src/components/articles/articles.css
+++ b/src/components/articles/articles.css
@@ -1,6 +1,6 @@
 .secondary-text {
   color: var(--extra-color);
-  margin-top: 35px;
+  margin-top: 20px;
 }
 
 .article-container {
@@ -64,8 +64,40 @@ article:first-child {
   background-color: rgba(250, 250, 250, 50%);
   border-radius: 6px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 254, 10%);
+
 }
 
 .articles-feed::-webkit-scrollbar-thumb:hover {
   background-color: var(--primary-color);
+}
+
+@media screen and (max-width: 1070px) {
+  .article-container {
+    width: 250px;
+    height: 220px;
+  }
+
+  .article-text {
+    font-size: 20px;
+  }
+
+  article:first-child {
+    margin-left: 20px;
+  }
+
+}
+
+@media screen and (max-width: 800px){
+  .article-container {
+    width: 200px;
+    height: 200px;
+  }
+
+  .article-text {
+    font-size: 16px;
+  }
+
+  article:first-child {
+    margin-left: 20px;
+  }
 }
