--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,5 +1,9 @@
 .gradient-background {
-  background: linear-gradient(90deg, rgba(0,0,254,1) 10%, rgba(160,241,198,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 254, 1) 10%,
+    rgba(160, 241, 198, 1) 100%
+  );
   height: 1500px;
   width: 1800px;
   max-width: 100vw;
@@ -10,11 +14,12 @@
   left: -200px;
   z-index: -4;
   filter: blur(150px);
+  transform: translate3d(0, 0, 0);
 }
 
-.grain-hero{
-  background-image: url('src/assets/texture.png');
-  height: 100vh;
+.grain-hero {
+  background-image: url("src/assets/texture.png");
+  height: 1050px;
   width: 100vw;
   z-index: 1;
   mix-blend-mode: overlay;
@@ -54,7 +59,6 @@ a {
   font-size: 18px;
 }
 
-
 .main-info {
   display: grid;
   grid-template-columns: auto auto;
@@ -89,4 +93,112 @@ a {
 
 .profile-pic {
   width: 350px;
+}
+
+@media screen and (max-width: 1070px) {
+  .header {
+    grid-template-columns: auto;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .main-info {
+    grid-template-columns: 1fr 1fr;
+    position: relative;
+    margin: 0px 20px;
+  }
+
+  .title {
+    font-size: 50px;
+    line-height: 50px;
+    color: var(--primary-color);
+    width: 500px;
+    align-self: end;
+  }
+
+  .header button {
+    display: none;
+  }
+
+  .logo {
+    place-self: center;
+    margin-bottom: 10px;
+  }
+
+  .profile-pic {
+    width: 250px;
+  }
+
+  .profile-container {
+    z-index: -2;
+  }
+
+  .gradient-background {
+    background: linear-gradient(
+    90deg,
+    rgba(0, 0, 254, 1) 10%,
+    rgba(160, 241, 198, 1) 100%
+  );
+    left: -130px;
+    height: 1400px;
+  }
+}
+
+@media screen and (max-width: 800px){
+  .logo{
+    height: 30px;
+  }
+
+  .main-info .socialmedia-icons{
+    margin-bottom: 10px;
+  }
+  .nav-items{
+    font-size: 14px;
+  }
+
+  .header{
+    margin-top: 30px;
+  }
+
+  .title{
+    font-size: 35px;
+    line-height: 35px;
+    width: 400px;
+    text-align: center;
+    padding-top: 100px;
+    text-shadow: 0px 0px 5px rgba(0, 0, 50, 10%);
+  }
+
+  .main-info{
+    margin: 0px;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: none;
+    position: relative;
+    place-items: center;
+  }
+
+  .profile-container{
+    position: absolute;
+    top: -10px;
+    justify-self: center;
+  }
+
+  .profile-pic{
+    width: 150px;
+  }
+
+  .gradient-background {
+    background: linear-gradient(
+    90deg,
+    rgba(0, 0, 254, 1) 65%,
+    rgba(160, 241, 198, 1) 90%
+  );
+    left: -50px;
+    top: -200px;
+    height: 700px;
+    width: 100vw;
+    filter: blur(100px);
+  }
+
 }
