--- a/src/components/socialmediaIcons/socialmediaIcons.css
+++ b/src/components/socialmediaIcons/socialmediaIcons.css
@@ -18,3 +18,11 @@
 .icon-socialmedia:hover {
   opacity: 1;
 }
+
+@media screen and (max-width: 800px){
+  .icon-socialmedia {
+    width: 24px;
+    height: 24px;
+    padding-right: 14px;
+  }
+}
