--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,7 @@
 .gradient-background-footer {
   width: 100vw;
   height: 100vh;
+  max-height: 700px;
   position: absolute;
   bottom: 0px;
   z-index: -4;
@@ -9,6 +10,7 @@
 .grain-footer {
   width: 100vw;
   height: 100vh;
+  max-height: 900px;
   position: absolute;
   bottom: 0px;
   z-index: -3;
@@ -23,11 +25,11 @@
 
 .footer-texts {
   margin-top: 20px;
-  font-size: 24px;
+  font-size: 16px;
   margin-left: 40px;
   margin-right: 40px;
   padding-right: 220px;
-  line-height: 30px;
+  line-height: 20px;
   color: var(--primary-color);
 }
 
@@ -69,11 +71,11 @@
 
 @media screen and (max-width: 1070px){
   .footer-texts{
-    font-size: 20px;
+    font-size: 16px;
     margin-left: 20px;
-    margin-right: 80px;
+    margin-right: 100px;
     padding-right: 20px;
-    line-height: 24px;
+    line-height: 20px;
   }
 
   .cta-text{
@@ -101,22 +103,22 @@
 
 @media screen and (max-width: 800px){
   .footer-texts{
-    font-size: 16px;
+    font-size: 14px;
     margin-left: 20px;
     margin-right: 0px;
-    padding-right: 20px;
+    padding-right: 80px;
     line-height: 20px;
     text-shadow: 0px 0px 5px rgba(0, 0, 254, 0.3);
   }
 
   .cta-text{
-    font-size: 30px;
+    font-size: 24px;
     margin-top: 20px;
   }
 
   .cta-mail{
-    font-size: 30px;
-    margin-top: 15px;
+    font-size: 24px;
+    margin-top: 10px;
     margin-bottom: 20px;
   }
 
@@ -132,7 +134,7 @@
 
   .gradient-background-footer {
     width: 100vw;
-    height: 90vh;
+    height: 75vh;
     position: absolute;
     bottom: 0px;
     z-index: -4;
