--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -153,7 +153,7 @@ a {
     margin-bottom: 10px;
   }
   .nav-items{
-    font-size: 14px;
+    font-size: 12px;
   }
 
   .header{
@@ -163,7 +163,7 @@ a {
   .title{
     font-size: 35px;
     line-height: 35px;
-    width: 400px;
+    width: 350px;
     text-align: center;
     padding-top: 100px;
     text-shadow: 0px 0px 5px rgba(0, 0, 50, 10%);
@@ -191,7 +191,7 @@ a {
   .gradient-background {
     background: linear-gradient(
     90deg,
-    rgba(0, 0, 254, 1) 65%,
+    rgba(0, 0, 254, 1) 40%,
     rgba(160, 241, 198, 1) 90%
   );
     left: -50px;
@@ -199,6 +199,16 @@ a {
     height: 700px;
     width: 100vw;
     filter: blur(100px);
+  }
+
+}
+
+@media screen and (min-width: 1800px){
+  .gradient-background{
+    height: 1100px;
+    width: 35000px;
+    top: -400px;
+    left: -350px;
   }
 
 }
